tdf#167962 Fix artificial skew for italic vertical glyphs in PDF export

Changes the values of skew coefficients in PDFWriterImpl::drawVerticalGlyphs,
specifically fSkewA to 0 and fSkewB to fSkew. This fixes the text being
slanted differently in PDF export compared to Writer.

Change-Id: I04d193351089e0dc87a8e978ded771e135dbde7a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/202319
Reviewed-by: Khaled Hosny <khaled@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit 1a756ab9467794889ba70667a872dddc9c53196d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/202561
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>